fix: update navbar and footer styles for improved visibility and consistency

--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,9 +1,9 @@
 :root {
   --text: #060b06;
   --background: #f3faf3;
-  --primary: #004405;
+  --primary: #002b00;
   --secondary: #004b0551;
-  --accent: #00b70c;
+  --accent: #006207;
 }
 
 /* typo */
@@ -129,13 +129,19 @@ a {
   color: var(--text);
 }
 
+footer a:hover {
+  color: var(--bs-white);
+  opacity: 0.7;
+}
+
 a:active {
   text-decoration: none;
   color: var(--text);
 }
 
 .dropdown-item.active {
-  background-color: #f8f9fa;
+  background-color: var(--primary);
+  color: var(--bs-white);
 }
 
 .nav-item {
@@ -145,17 +151,20 @@ a:active {
 
 footer hr {
   width: 60px;
-  background-color: var(--accent);
+  background-color: var(--primary);
   height: 3px;
 }
 
 .navbar {
-  background-color: white !important;
+  background-color: var(--primary) !important;
+}
+
+#navbar-toggler:active {
+  border: none;
 }
 
 .navbar .navbar-brand {
-  color: var(--primary);
-  font-weight: 700;
+  color: var(--bs-white);
 }
 
 .navbar .navbar-brand:hover {
@@ -163,38 +172,45 @@ footer hr {
 }
 
 .navbar .nav-link {
-  color: var(--text) !important;
+  color: var(--bs-white) !important;
 }
 .navbar .nav-link:hover {
-  color: #555 !important; /* Colore del testo al passaggio del mouse */
+  opacity: 0.9; /* Colore del testo al passaggio del mouse */
 }
+
+.offcanvas-title {
+  color: var(--bs-white) !important;
+}
+
 .offcanvas-dark {
-  background-color: white !important;
+  background-color: var(--primary) !important;
 }
 .offcanvas-dark .nav-link,
 .offcanvas-dark .navbar-brand {
-  color: var(--text) !important;
+  color: var(--bs-white) !important;
 }
 .offcanvas-dark .nav-link:hover,
 .offcanvas-dark .navbar-brand:hover {
-  color: #555 !important; /* Colore del testo al passaggio del mouse */
+  opacity: 0.9 !important; /* Colore del testo al passaggio del mouse */
 }
-.footer-section {
-  background-color: white !important;
-  color: var(--text) !important;
+
+.offcanvas .dropdown-menu {
+  background-color: var(--primary);
+  border: none;
 }
-.footer-section a {
-  color: var(--text) !important;
+
+.navbar .dropdown-menu {
+  border: 0.5px solid rgb(0, 46, 0);
+  background-color: var(--primary);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.15);
 }
-.footer-section a:hover {
-  color: #555 !important; /* Colore del testo al passaggio del mouse */
-}
+
 .footer-section svg {
-  fill: var(--text) !important;
+  fill: white !important;
 }
 
 #footer-copyright {
-  background-color: var(--secondary);
+  background-color: rgb(0, 39, 0);
 }
 
 .navbar {
@@ -216,7 +232,17 @@ footer hr {
 }
 
 #footer-social {
-  background-color: var(--secondary);
+  background-color: rgb(0, 39, 0);
+}
+
+footer section {
+  background-color: rgb(0, 31, 0);
+  color: white;
+}
+
+footer section a,
+footer section h6 {
+  color: white;
 }
 
 body {
@@ -230,13 +256,12 @@ body {
 }
 
 .nav-link {
-  opacity: 0.7;
+  opacity: 0.78;
 }
 
 nav .nav-link.active {
   opacity: 1;
-  font-weight: 600;
-  color: var(--primary) !important;
+  color: var(--bs-white) !important;
 }
 
 /* LANGUAGE SELECTOR */
